# gtestctest-sandbox

./: .gitignore  CMakeLists.txt  README.md
src/: Dependent.cpp  Dependent.h  MockService.h  Service.h  execexample.cpp
src/tests/: basic_test.cpp
tests/: passing_integration_test.sh
